Changes in 0.80.2:
  o Client Changes:
    * Fix bugs in conary update foo=<old>--<new> behavior
  o Build Changes:
    * It is now possible for a recipe to request that specific individual
      requirements be removed from files (it used to be all or nothing)
      using the exceptDeps keyword argument to r.Requires().

Changes in 0.80.1:
  o Client Changes:
    * User names and passwords are no longer allowed in repository maps;
      "user" configuration entries must be used instead.
    * The clone command now allows you to clone a binary onto the same
      branch, without having to reclone the source.
    * The TroveInfo table on the client is getting corrupted with
      LoadedTrove and BuildReq entries for components.  These entries
      are only valid on packages.  Code was added to catch when this
      happens to aid debugging.  Additionally, Conary will
      automatically remove the invalid entries the first time 0.80.1
      is run.
    * Environment variables are expanded in paths in conary configuration files.
    * localcs now allows the version and flavor to be specified for a trove
    * conary scs --all now behaves the way it used to again
  o Build Changes:
    * Java dependency generation is now enabled; Java dependency enforcement
      is still disabled.
    * The skipMissingSubDir keyword argument now actually works correctly
      when the subdirectory is missing.
  o Common Changes:
    * Entitlement support has been added as an alternate method of 
      authentication.

Changes in 0.80.0:
  o Client Changes:
    * The logic for defining updates across a hierarchy has been completely
      replaced. Instead of rigidly following the trove digraph, we flatten
      the update to choose how troves get updated, and walk the hierarchy
      to determine which updates to actually apply.
    * Dependency resolution could include troves which caused duplicate 
      removals for the troves those included troves replace